--- a/user/templates/user/delete_profile.html
+++ b/user/templates/user/delete_profile.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block title %} Password reset - ChartSite {% endblock %}
+{% block title %} Delete Account - ChartSite {% endblock %}
 
 {% block content %}
   <div class="container mb-5" style="max-width: 490px;">
