--- a/chartapp/templates/chartapp/chart_detail.html
+++ b/chartapp/templates/chartapp/chart_detail.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %} {{ object.name }} - ChartSite {% endblock %}
+
 {% block content %}
   <div class="container mt-4" style="max-width: 1140px;">
     <div class="card">
@@ -24,7 +26,7 @@
   </div>
   <div class="container mt-3 mb-5" style="max-width: 1140px;">
     <div class="card">
-      <div class="card-header p-4 mb-1 d-flex bg-white pb-2">          
+      <div class="card-header p-4 mb-1 d-flex bg-white pb-2">
         <h4 class="">Edit</h4>
         <div class="ms-auto">
           <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#saveModal">
@@ -67,7 +69,7 @@
             <div class="btn btn-outline-primary">
               <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-graph-up" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z"/>
-              </svg>  
+              </svg>
             </div>
             <label class="text-center" style="display: block;">Line</label>
           </label>
@@ -76,7 +78,7 @@
           <h5 class="p-2 ps-0">Content</h5>
           <div style="height: 300px; max-height: 300px;" class="border-right overflow-auto">
             <table class="table table-bordered">
-              <thead>  
+              <thead>
                 <tr>
                   <th class="text-center" scope="col">#</th>
                   <th scope="col">Label</th>
@@ -99,17 +101,17 @@
           </div>
           <div class="d-flex justify-content-end">
             <button id="add-row" class="btn btn-primary mt-4">+ Add row</button>
-  
+
           </div>
-        </div>  
+        </div>
       </div>
       <div class="card-footer bg-white p-3">
         <div class="d-flex justify-content-end">
           <button id="render" class="btn btn-primary">Render</button>
         </div>
       </div>
-    </div> 
-  </div>   
+    </div>
+  </div>
   <div class="modal" id="saveModal">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
@@ -122,7 +124,7 @@
         </div>
       </div>
     </div>
-  </div>  
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script type="text/javascript">
     const objectLabel = '{{ object.label }}'
