--- a/chartapp/templates/chartapp/project_list.html
+++ b/chartapp/templates/chartapp/project_list.html
@@ -1,10 +1,12 @@
 {% extends 'chartapp\base.html' %}
 {% load static %}
 
+{% block title %} All projects - ChartSite {% endblock %}
+
 {% block content %}
   <div class="container mt-4" style="max-width: 1140px;">
     <div class="card">
-      <div class="card-header p-4 mb-1 d-flex bg-white pb-2">          
+      <div class="card-header p-4 mb-1 d-flex bg-white pb-2">
         <h3>All Projects</h3>
         <div class="ms-auto">
           <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal" id="create-btn">
@@ -19,7 +21,7 @@
               <button class="btn btn-outline-primary" id="update-btn" data-bs-toggle="modal" data-bs-target="#createModal" value="">
                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                   <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
-                </svg>  
+                </svg>
               </button>
               <button class="btn btn-outline-danger" id="delete-btn" data-bs-toggle="modal" data-bs-target="#createModal" value="">
                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
