--- a/user/templates/registration/login.html
+++ b/user/templates/registration/login.html
@@ -3,17 +3,19 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+{% block title %} Login - ChartSite {% endblock %}
+
 {% block content %}
-  <div class="container mb-5" style="max-width: 450px;">  
+  <div class="container mb-5" style="max-width: 450px;">
     <div class="card mt-5">
         <div class="card-header border-0 p-4" style="background-color: #001f48;">
           <div class="d-flex brand justify-content-center">
             <h2 style="color:rgb(253, 78, 78);">Cha</h2>
             <h2 style="color: rgb(121, 121, 250);">rtS</h2>
             <h2 style="color: rgb(255, 255, 89);">ite</h2>
-          </div>        
+          </div>
           <div class="mt-4">
-            <h4 class="text-white text-center">Login to your account</h4>        
+            <h4 class="text-white text-center">Login to your account</h4>
           </div>
         </div>
         <div class="card-body">
@@ -28,13 +30,13 @@
               {{ form.username|as_crispy_field }}
             </div>
             <div class="p-3">
-              {{ form.password|as_crispy_field }}            
+              {{ form.password|as_crispy_field }}
             </div>
             <div class="d-flex mt-5 p-2 align-content-center">
-              <a class="text-decoration-none form-label m-0 pt-2" href="{% url 'password_reset' %}">Forgot password?</a>  
+              <a class="text-decoration-none form-label m-0 pt-2" href="{% url 'password_reset' %}">Forgot password?</a>
               <a class="ms-auto btn second-btn border text-decoration-none" href="{% url 'signup' %}">
                 Register
-              </a> 
+              </a>
               <button class="btn btn-primary ms-2" type="submit">Login</button>
             </div>
           </form>
