--- a/user/templates/registration/password_change_done.html
+++ b/user/templates/registration/password_change_done.html
@@ -2,19 +2,19 @@
 
 {% load static %}
 
-{% block title %} Password Successfully Changed {% endblock %}
+{% block title %} Password Successfully Changed - ChartSite{% endblock %}
 
 {% block content %}
-  <div class="container mb-5" style="max-width: 470px;">  
+  <div class="container mb-5" style="max-width: 470px;">
     <div class="card mt-5 pb-2">
         <div class="card-header border-0 p-4" style="background-color: #001f48;">
           <div class="d-flex brand justify-content-center">
             <h2 style="color:rgb(253, 78, 78);">Cha</h2>
             <h2 style="color: rgb(121, 121, 250);">rtS</h2>
             <h2 style="color: rgb(255, 255, 89);">ite</h2>
-          </div>        
+          </div>
           <div class="mt-4">
-            <h4 class="text-white text-center">Password changed</h4>        
+            <h4 class="text-white text-center">Password changed</h4>
           </div>
         </div>
         <div class="card-body">
