--- a/user/templates/registration/password_reset_complete.html
+++ b/user/templates/registration/password_reset_complete.html
@@ -2,17 +2,19 @@
 
 {% load static %}
 
+{% block title %} Password Successfully Reset - ChartSite {% endblock %}
+
 {% block content%}
-  <div class="container mb-5" style="max-width: 470px;">  
+  <div class="container mb-5" style="max-width: 470px;">
     <div class="card mt-5 pb-2">
       <div class="card-header border-0 p-4" style="background-color: #001f48;">
         <div class="d-flex brand justify-content-center">
           <h2 style="color:rgb(253, 78, 78);">Cha</h2>
           <h2 style="color: rgb(121, 121, 250);">rtS</h2>
           <h2 style="color: rgb(255, 255, 89);">ite</h2>
-        </div>        
+        </div>
         <div class="mt-4">
-          <h4 class="text-white text-center">Password successfully reset</h4>        
+          <h4 class="text-white text-center">Password successfully reset</h4>
         </div>
       </div>
       <div class="card-body">
@@ -23,7 +25,7 @@
         </div>
         <div class="d-flex p-2 align-content-center">
           <a class="ms-auto btn btn-primary  text-decoration-none" href="{% url 'login' %}">
-            Login 
+            Login
           </a>
         </div>
       </div>
