--- a/user/templates/registration/password_reset_confirm.html
+++ b/user/templates/registration/password_reset_confirm.html
@@ -3,17 +3,19 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+{% block title %} Reset Password - ChartSite {% endblock %}
+
 {% block content %}
-  <div class="container mb-5" style="max-width: 480px;">  
+  <div class="container mb-5" style="max-width: 480px;">
     <div class="card mt-5">
       <div class="card-header border-0 p-4" style="background-color: #001f48;">
         <div class="d-flex brand justify-content-center">
           <h2 style="color:rgb(253, 78, 78);">Cha</h2>
           <h2 style="color: rgb(121, 121, 250);">rtS</h2>
           <h2 style="color: rgb(255, 255, 89);">ite</h2>
-        </div>        
+        </div>
         <div class="mt-4">
-          <h4 class="text-white text-center">Reset password</h4>        
+          <h4 class="text-white text-center">Reset password</h4>
         </div>
       </div>
       <div class="card-body">
@@ -25,16 +27,16 @@
               {{ form.non_field_errors }}
             </div>
           {% endif %}
-          
+
           {% for field in form %}
             <div class="p-3">
               {{ field|as_crispy_field }}
             </div>
           {% endfor %}
 
-          <div class="d-flex mt-5 p-2 align-content-center"> 
+          <div class="d-flex mt-5 p-2 align-content-center">
             <button class="btn btn-primary ms-2" type="submit">Reset</button>
-          </div>     
+          </div>
         </form>
       </div>
     </div>
