--- a/user/templates/registration/password_reset_form.html
+++ b/user/templates/registration/password_reset_form.html
@@ -3,19 +3,19 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block title %} Password reset - ChartSite {% endblock %}
+{% block title %} Password Reset - ChartSite {% endblock %}
 
 {% block content %}
-  <div class="container mb-5" style="max-width: 490px;">  
+  <div class="container mb-5" style="max-width: 490px;">
     <div class="card mt-5">
         <div class="card-header border-0 p-4" style="background-color: #001f48;">
           <div class="d-flex brand justify-content-center">
             <h2 style="color:rgb(253, 78, 78);">Cha</h2>
             <h2 style="color: rgb(121, 121, 250);">rtS</h2>
             <h2 style="color: rgb(255, 255, 89);">ite</h2>
-          </div>        
+          </div>
           <div class="mt-4">
-            <h4 class="text-white text-center">Password Reset</h4>        
+            <h4 class="text-white text-center">Password Reset</h4>
           </div>
         </div>
         <div class="card-body">
@@ -31,15 +31,15 @@
               </div>
             {% endif %}
             <div class="p-3">
-              {{ form.email|as_crispy_field }}    
+              {{ form.email|as_crispy_field }}
             </div>
 
             <div class="d-flex mt-5 p-2 align-content-center">
               <a class="ms-auto btn second-btn border text-decoration-none" href="{% url 'login' %}">
                 Back to login
-              </a> 
+              </a>
               <button class="btn btn-primary ms-2" type="submit">Send email</button>
-            </div> 
+            </div>
           </form>
         </div>
       </div>
