--- a/user/templates/user/signup.html
+++ b/user/templates/user/signup.html
@@ -39,7 +39,7 @@
           </div>
           <div class="d-flex mt-5 p-2 align-content-center">
             <a class="text-decoration-none form-label m-0 pt-2" href="{% url 'login' %}">Already have an account?</a>
-            <button class="btn btn-primary ms-auto" type="submit">REgister</button>
+            <button class="btn btn-primary ms-auto" type="submit">Register</button>
           </div>
         </form>
       </div>
