--- a/chartapp/templates/chartapp/base.html
+++ b/chartapp/templates/chartapp/base.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 
-    <nav class="navbar shadow-sm navbar-expand-sm navbar-dark sticky-top" style="background-color: #001f48;"> 
+    <nav class="navbar shadow-sm navbar-expand-sm navbar-dark sticky-top" style="background-color: #001f48;">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'all-projects' %}">
           <div class="d-flex">
@@ -30,13 +30,27 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="{% url 'all-projects' %}">All Projects</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">{{ user.username }}</a></li>            
+            {% if user.is_authenticated %}
+              <li class="nav-item"><a class="nav-link" href="{% url 'all-projects' %}">All Projects</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">{{ user.username }}</a></li>
+            {% else %}
+              <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'tryout' %}">Demo</a></li>
+            {% endif %}
           </ul>
           <ul class="navbar-nav ms-auto me-2">
-            <button class="btn btn-primary">
-              <a class="text-white text-decoration-none" href="{% url 'logout' %}">Logout</a>
-            </button>
+            {% if user.is_authenticated %}
+              <button class="btn btn-primary">
+                <a class="text-white text-decoration-none" href="{% url 'logout' %}">Logout</a>
+              </button>
+            {% else %}
+              <button class="btn btn-primary me-2">
+                <a class="text-white text-decoration-none" href="{% url 'login' %}">Login</a>
+              </button>
+              <button class="btn btn-primary">
+                <a class="text-white text-decoration-none" href="{% url 'signup' %}">Register</a>
+              </button>
+            {% endif %}
           </ul>
         </div>
       </div>
