added front page

--- a/chartapp/templates/chartapp/base.html
+++ b/chartapp/templates/chartapp/base.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar shadow-sm navbar-expand-sm navbar-dark sticky-top" style="background-color: #001f48;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'all-projects' %}">
+        <a class="navbar-brand" href="{% url 'home' %}">
           <div class="d-flex">
             <h3 style="color:rgb(253, 78, 78);">Cha</h3>
             <h3 style="color: rgb(121, 121, 250);">rtS</h3>
