--- a/user/templates/registration/login.html
+++ b/user/templates/registration/login.html
@@ -34,7 +34,7 @@
             </div>
             <div class="d-flex mt-5 p-2 align-content-center">
               <a class="text-decoration-none form-label m-0 pt-2" href="{% url 'password_reset' %}">Forgot password?</a>
-              <a class="ms-auto btn second-btn border text-decoration-none" href="{% url 'signup' %}">
+              <a class="ms-auto btn second-btn border p-2 text-decoration-none" href="{% url 'signup' %}">
                 Register
               </a>
               <button class="btn btn-primary ms-2" type="submit">Login</button>
