front page updated

--- a/chartapp/templates/chartapp/home.html
+++ b/chartapp/templates/chartapp/home.html
@@ -22,7 +22,7 @@
       </div>
     </div>
   </div>
-  <div class="d-flex justify-content-center align-items-center mt-5">
+  <div class="d-flex justify-content-center align-items-center mt-5" style="height: 60%;">
     <div class="mt-5 mb-5">
       <h2 class="mt-5">
         Create account today
