--- a/chartapp/templates/chartapp/chart_detail.html
+++ b/chartapp/templates/chartapp/chart_detail.html
@@ -74,7 +74,7 @@
             <label class="text-center" style="display: block;">Line</label>
           </label>
         </div>
-        <div class="p-5 pt-3 pb-3">
+        <div class="p-5 pt-3 pb-3 content-div">
           <h5 class="p-2 ps-0">Content</h5>
           <div style="height: 300px; max-height: 300px;" class="border-right overflow-auto">
             <table class="table table-bordered">
