--- a/chartapp/templates/chartapp/base.html
+++ b/chartapp/templates/chartapp/base.html
@@ -40,14 +40,14 @@
           </ul>
           <ul class="navbar-nav ms-auto me-2">
             {% if user.is_authenticated %}
-              <button class="btn btn-primary">
+              <button class="btn btn-primary m-1">
                 <a class="text-white text-decoration-none" href="{% url 'logout' %}">Logout</a>
               </button>
             {% else %}
-              <button class="btn btn-primary me-2">
+              <button class="btn btn-primary m-1">
                 <a class="text-white text-decoration-none" href="{% url 'login' %}">Login</a>
               </button>
-              <button class="btn btn-primary">
+              <button class="btn btn-primary m-1">
                 <a class="text-white text-decoration-none" href="{% url 'signup' %}">Register</a>
               </button>
             {% endif %}
