--- a/chartapp/templates/chartapp/home.html
+++ b/chartapp/templates/chartapp/home.html
@@ -7,27 +7,27 @@
 {% block content %}
   <div class="d-flex justify-content-center back">
     <div class="mt-5">
-      <h1 class="text-white mt-5">
+      <h1 class="text-white m-4">
         Create graphs and visualize data
       </h1>
-      <div class="d-flex justify-content-center mt-4">
+      <div class="d-flex justify-content-center m-2">
         <button class="btn second-btn p-2 bg-white">
           <a href="{% url 'tryout' %}" class="text-decoration-none" style="color: rgb(46 46 214);">
             Tryout the demo
           </a>
         </button>
       </div>
-      <div class="mt-5 shadow">
-        <img src="{% static 'chartapp/Capture.PNG' %}" height="300" width='600'>
+      <div class="mt-5 shadow" style="min-height: 100px; min-width: 200px; max-height: 300px; max-width: 600px;">
+        <img style="max-height: 100%; max-width: 100%;" src="{% static 'chartapp/Capture.PNG' %}">
       </div>
     </div>
   </div>
   <div class="d-flex justify-content-center align-items-center mt-5" style="height: 60%;">
     <div class="mt-5 mb-5">
-      <h2 class="mt-5">
+      <h2 class="m-4">
         Create account today
       </h2>
-      <div class="d-flex justify-content-center mt-5">
+      <div class="d-flex justify-content-center">
         <button class="btn btn-primary me-3">
           <a href="{% url 'signup' %}" class="text-decoration-none text-white">
             Create account
@@ -50,7 +50,7 @@
     }
     .back {
       background-color: rgb(46 46 214);
-      height: 80%;
+      height: 90%;
       width: 100%;
     }
   </style>
