--- a/user/static/user/style.css
+++ b/user/static/user/style.css
@@ -7,7 +7,7 @@
   border: none;
 }
 .brand h2 {
-  font-family: font-family: 'Righteous', cursive;;
+  font-family: 'Righteous', cursive;
   margin: 0%;
 }
 .btn {
