--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -11,10 +11,10 @@
       <div class="card-header p-4 mb-1 d-flex bg-white pb-2">
         <h3>{{ user.username }}</h3>
       </div>
-      <div class="m-4">
+      <div id="detail-table" class="m-4">
         <div class="border">
           <div class="d-flex">
-            <p class="m-0 p-2 fw-bold text-center w-25 border-end">
+            <p id="title-name" class="m-0 p-2 fw-bold text-center w-25 border-end">
               Username
             </p>
             <p class="m-0 p-2">
@@ -22,7 +22,7 @@
             </p>
           </div>
           <div class="d-flex border-top">
-            <p class="m-0 p-2 fw-bold text-center w-25 border-end">
+            <p id="title-name" class="m-0 p-2 fw-bold text-center w-25 border-end">
               Email
             </p>
             <p class="m-0 p-2">
@@ -40,11 +40,11 @@
         </div>
       </div>
       <div class="p-4 d-flex">
-        <div class="border me-2 w-25">
+        <div class="border me-2">
           <p class="text-center m-0 fw-bold border-bottom p-3">Total number of projects</p>
           <h3 class="text-center p-3">{{ projects }}</h3>
         </div>
-        <div class="border w-25">
+        <div class="border">
           <p class="text-center m-0 fw-bold border-bottom p-3">Total number of charts</p>
           <h3 class="text-center p-3">{{ chart }}</h3>
         </div>
